<?xml version="1.0"?>
<package format="2">
  <name>velocity_flow_manager</name>
  <version>0.1.0</version>
  <description>Simple GUI to manage the velocity-flow tracker (Initialize / Start / Stop)</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_srvs</depend>
  <depend>kr_tracker_msgs</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
