[metadata]
name = velocity_flow_manager
version = 0.1.0
description = GUI to manage velocity tracker
author = Dexter Ong

[options]
packages = find:
install_requires =
    rclpy
    std_srvs
    PyQt5; python_version >= "3"
python_requires = >=3.8
include_package_data = True

[options.entry_points]
console_scripts =
    velocity_flow_gui = velocity_flow_manager.velocity_flow_gui:main
    velocity_flow_manager = velocity_flow_manager.velocity_flow_manager:main

[develop]
script_dir=$base/lib/velocity_flow_manager

[install]
install_scripts=$base/lib/velocity_flow_manager
